--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<div class="background-posts">
+
 <div class="wrapper-posts">
   <div class="form-title"><h1>Posts</h1></div>
   <!-- FILTER THE RESULTS -->
