--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,16 +3,22 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
        <div class="post-card">
-        <div class="one-post-ago">
+        <div class="post-ago">
           <p><%= time_ago_in_words(@post.created_at) %> ago</p>
         </div>
-        <div class="one-post-image">
+        <div class="posts-images">
           <%= cl_image_tag @post.author.full_picture, class: "avatar" %>
           <%= link_to @post.author.title, user_path(@post.author) %>
         </div>
 
-        <div class="posts-underline-orange">
-          <span class="posts-title"> <%= @post.subject %></span></div> <br>
+          <!-- Show label for local or newcomer -->
+          <% if @post.author.kind == "dutchie" %>
+               <div class="kind-label dutchie"> local </div>
+               <% else %>
+               <div class="kind-label refugee"> newcomer </div>
+          <% end %>
+
+          <div class="post-subject"> <%= @post.subject %></div> <br>
 
           <div class="posts-content">
             <%= @post.content %>
@@ -33,7 +39,7 @@
       </div>
     </div>
     <div class="goback">
-      <%= link_to "Back to all posts", posts_path(), class:"btn-black button-with-padding"%>
+      <%= link_to "Back to all posts", posts_path(), class:"hvr-sweep-to-right btn-black"%>
     </div>
   </div>
 
