--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
       <div class="list-type">
         <span style="cursor:pointer" class="toggle-map-list">
           <a class="btn-blue-select butti active" data-target="#list-part">LIST</a>
-          <a class="btn-blue-select butti" data-target="#map" onClick="loadMap()">MAP</a>
+          <a class="btn-blue-select butti butti-map" data-target="#map" onClick="loadMap()">MAP</a>
         </span>
       </div>
       <div class="posts-type-selection person-type">
