adjust the about section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,24 +13,24 @@
     </div>
   </div>
   <div class="home-wrapper">
-    <div class="home-title">The RefuGapp Concept</div>
+    <div class="home-title">What is RefuGapp?</div>
     <div class="home-about">
       <br>
-      <p>Whether we are <span class="home-highlight">newcomers</span> or <span class="home-highlight">locals</span> in the Netherlands, we all like to feel welcome and connected. With Refugapp we are making it possible to discover people nearby who want to <span class="home-highlight">get connected</span> in order to share skills, learn from each other and join fun activities. </p>
+      <p>Whether we are <span class="home-highlight">newcomers</span> or <span class="home-highlight">locals</span> in the Netherlands, we all like to feel welcome and connected. With Refugapp we are making it possible to discover people nearby who want to <span class="home-highlight">get connected</span> in order to share skills, learn from each other or just have a coffee. </p>
       <p>How to start? It's simple! Send a request to an existing post or create your own post.
         To make it easier there are three categories for posts:
         <ul>
           <li>
-            <span class="home-highlight">Social</span> to meet people through fun activities and broaden your social network
+            <span class="home-highlight">Social</span> to meet people <!-- through fun activities --> and broaden your social network.
           </li>
           <li>
-            <span class="home-highlight">Language</span> to practice and improve a language you speak (or want to speak!)
+            <span class="home-highlight">Language</span> to practice and improve a language you speak (or want to speak!).
           </li>
           <li>
-            <span class="home-highlight">Skills</span> to share your passions and talents and maybe develop some new ones
+            <span class="home-highlight">Skills</span> to share your passions and talents and maybe develop some new ones.
           </li>
         </ul>
-        <p>Scroll down to see some example posts!</p>
+        <p>Scroll down to see some example posts, and check out some of the shared stories by people who have met through RefuGapp!</p>
       </p>
     </div>
 
