post#show requestbutton smaller and fix link

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
             <% if @post.button_valid(current_user) == "redirect" %>
             <p><%= link_to "Write a request to this Post", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
             <% elsif @post.button_valid(current_user) == "request" %>
-            <p><%= link_to "Write a request to this Post", new_post_request_path(@post), class: "hvr-underline-from-center btn-border-orange" %></p>
+            <p><%= link_to "Write a request", new_post_request_path(@post), class: "hvr-underline-from-center btn-border-orange" %></p>
             <%else %>
             <% end %>
           </div>
