--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,59 +30,58 @@
             <span class="home-highlight">Skills</span> to share your passions and talents and maybe develop some new ones.
           </li>
         </ul>
-        <p>Scroll down to see some example posts, and check out some of the shared stories by people who have met through RefuGapp!</p>
-      </p>
-    </div>
+        <p>Scroll down to see some of the posts, and read about the experiences of people who have met through RefuGapp in the 'Shared Stories'!</p>
+      </div>
 
 
 
 
-    <div class="home-title">What are people posting?</div>
-    <div class="homepage-posts">
-      <div class="container-fluid">
-        <div class="row">
-          <% @posts.sample(3).each do |post| %>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="posts-card">
-              <div class="posts-underline-orange">
-                <span class="posts-title"> <%= post.subject %></span>
-              </div><br>
-              <%= link_to " ", post_path(post), class:"linktopost" %> <br>
-              <% if post.author.kind == "dutchie" %>
-              <div class="kind-label dutchie"> local </div>
-              <% else %>
-              <div class="kind-label refugee"> newcomer </div>
-              <% end %>
-              <div class="posts-content">
-                <%= truncate(post.content, :length => 120) %>
-                <% if post.content.length > 120 %>
-                <%= link_to "read more", post_path(post)   %>
+      <div class="home-title">What are people posting?</div>
+      <div class="homepage-posts">
+        <div class="container-fluid">
+          <div class="row">
+            <% @posts.sample(3).each do |post| %>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="posts-card">
+                <div class="posts-underline-orange">
+                  <span class="posts-title"> <%= post.subject %></span>
+                </div><br>
+                <%= link_to " ", post_path(post), class:"linktopost" %> <br>
+                <% if post.author.kind == "dutchie" %>
+                <div class="kind-label dutchie"> local </div>
+                <% else %>
+                <div class="kind-label refugee"> newcomer </div>
                 <% end %>
-              </div>
-              <div class="post-ago">
-                <p><%= time_ago_in_words(post.created_at) %> ago</p>
-              </div>
-              <div class="posts-images">
-                <%= cl_image_tag post.author.full_picture, class: "avatar" %>
-                <%= link_to post.author.title, user_path(post.author) %>
-              </div>
-              <div class="post-make">
-                <% if post.button_valid(current_user) == "redirect" %>
-                <p><%= link_to "Write a request to this Post", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
-                <% elsif post.button_valid(current_user) == "request" %>
-                <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
-                <%else %>
-                <% end %>
+                <div class="posts-content">
+                  <%= truncate(post.content, :length => 120) %>
+                  <% if post.content.length > 120 %>
+                  <%= link_to "read more", post_path(post)   %>
+                  <% end %>
+                </div>
+                <div class="post-ago">
+                  <p><%= time_ago_in_words(post.created_at) %> ago</p>
+                </div>
+                <div class="posts-images">
+                  <%= cl_image_tag post.author.full_picture, class: "avatar" %>
+                  <%= link_to post.author.title, user_path(post.author) %>
+                </div>
+                <div class="post-make">
+                  <% if post.button_valid(current_user) == "redirect" %>
+                  <p><%= link_to "Write a request to this Post", new_user_session_path(), class: "hvr-underline-from-center btn-border-orange" %></p>
+                  <% elsif post.button_valid(current_user) == "request" %>
+                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "hvr-underline-from-center btn-border-orange" %></p>
+                  <%else %>
+                  <% end %>
+                </div>
               </div>
             </div>
+            <% end %>
           </div>
-          <% end %>
+        </div>  <br>
+        <div class="posts-center">
+          <%= link_to 'All posts', posts_path, class:"hvr-sweep-to-right btn-orange  make-post" %>
         </div>
-      </div>  <br>
-      <div class="posts-center">
-        <%= link_to 'All posts', posts_path, class:"hvr-sweep-to-right btn-orange  make-post" %>
       </div>
     </div>
   </div>
-</div>
 </div>
