'Shared stories' without ''

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
             <span class="home-highlight">Skills</span> to share your passions and talents and maybe develop some new ones.
           </li>
         </ul>
-        <p>Scroll down to see some of the posts, and read about the experiences of people who have met through RefuGapp in the 'Shared stories'!</p>
+        <p>Scroll down to see some of the posts, and read about the experiences of people who have met through RefuGapp in the Shared stories!</p>
       </div>
 
 
