not scrolling toooo much anymore

--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -6,7 +6,7 @@
 .chatbox {
   text-align: center;
   max-width: 800px;
-  margin: 100px auto;
+  margin: 10px auto;
   background-color: $light-blue;
   padding: 80px;
   font-family: "Open Sans";
@@ -16,6 +16,7 @@
 ul{
   list-style: none;
   width: 700px;
+  height: 70vh;
 }
 
 .chat {
@@ -83,4 +84,13 @@ ul{
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+.chat-wrapper{
+  margin-top: 0px;
+}
+
+.chat-container {
+  padding-bottom: 20px;
+  text-align: center;
 }
