--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -1,66 +1,67 @@
-<div class="wrapper">
-  <div class="container">
+<div class="chat-wrapper">
+  <div class="chat-container">
     <div class="chatbox">
       <h1 class= "form-title">Your Chat with
-      <% if @request.messenger != current_user %>
-      <%= @request.messenger.title  %>
-      <% else %>
-      <%= @request.post.author.title %>
-      <% end %>
+        <% if @request.messenger != current_user %>
+        <%= @request.messenger.title  %>
+        <% else %>
+        <%= @request.post.author.title %>
+        <% end %>
 
       </h1>
 
-<div class="chat">
-  <ul>
-    <% if @request.messenger_id == current_user.id %>
-    <li class= "you">
-      <div class ="msg bubble-right">
-        <div class="yousender"><b>You</b></div>
-        <p><%= @request.message %></p>
-        <time><%=time_ago_in_words(@request.created_at) %> ago</time>
-      </div>
-    </li>
-    <% else %>
-    <li class= "other">
-      <div class="msg">
-        <div class="hesender "><p><b><%= User.find(@request.messenger_id).title %></b></p></div>
-        <p><%= @request.message %></p>
-        <time><%=time_ago_in_words(@request.created_at) %> ago</time>
+      <div class="chat">
+        <ul>
+          <% if @request.messenger_id == current_user.id %>
+          <li class= "you">
+            <div class ="msg bubble-right">
+              <div class="yousender"><b>You</b></div>
+              <p><%= @request.message %></p>
+              <time><%=time_ago_in_words(@request.created_at) %> ago</time>
+            </div>
+          </li>
+          <% else %>
+          <li class= "other">
+            <div class="msg">
+              <div class="hesender "><p><b><%= User.find(@request.messenger_id).title %></b></p></div>
+              <p><%= @request.message %></p>
+              <time><%=time_ago_in_words(@request.created_at) %> ago</time>
 
-      </div>
-    </li>
-    <% end %>
+            </div>
+          </li>
+          <% end %>
 
-    <% @chat_messages.each do |chat_message| %>
-    <% if chat_message.user_id == current_user.id %>
-    <li class= "you">
-      <div class ="msg ">
-        <div class="yousender"><b>You</b></div>
-        <p><%= chat_message.content %></p>
-        <time><%=time_ago_in_words(chat_message.created_at) %> ago</time>
+          <% @chat_messages.each do |chat_message| %>
+          <% if chat_message.user_id == current_user.id %>
+          <li class= "you">
+            <div class ="msg ">
+              <div class="yousender"><b>You</b></div>
+              <p><%= chat_message.content %></p>
+              <time><%=time_ago_in_words(chat_message.created_at) %> ago</time>
+            </div>
+          </li>
+          <% else %>
+          <li class= "other">
+            <div class="msg">
+              <div class="hesender "><p><b><%= User.find(chat_message.user_id).title %>:</b></p></div>
+              <p><%= chat_message.content %></p>
+              <time><%=time_ago_in_words(chat_message.created_at) %> ago</time>
+            </div>
+          </li>
+          <% end %>
+          <% end %>
+        </ul>
       </div>
-    </li>
-    <% else %>
-    <li class= "other">
-      <div class="msg">
-        <div class="hesender "><p><b><%= User.find(chat_message.user_id).title %>:</b></p></div>
-        <p><%= chat_message.content %></p>
-        <time><%=time_ago_in_words(chat_message.created_at) %> ago</time>
+      <%= simple_form_for [@request, @chat_message], url: post_request_chat_messages_path, html: {method: :post } do |f| %>
+      <%= f.full_error :unlock_token %>
+
+      <div class="form_inputs">
+        <%= f.input :content, autofocus: true, placeholder: 'Your message', label: false, class:"textinput"%>
       </div>
-    </li>
-    <% end %>
-    <% end %>
-  </ul>
-</div>
-<%= simple_form_for [@request, @chat_message], url: post_request_chat_messages_path, html: {method: :post } do |f| %>
-<%= f.full_error :unlock_token %>
+      <%= f.submit 'Send', class: "btn btn-orange-black submit" %>
+      <% end %>
 
-<div class="form_inputs">
-  <%= f.input :content, autofocus: true, placeholder: 'Your message', label: false, class:"textinput"%>
-</div>
-<%= f.submit 'Send', class: "btn btn-orange-black submit" %>
-<% end %>
-
-</div>
-<%= link_to 'Back', dashboard_root_path, class:"hvr-sweep-to-right btn-orange" %>
+    </div>
+    <%= link_to 'Back', dashboard_root_path, class:"hvr-sweep-to-right btn-orange" %>
+  </div>
 </div>
