--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -4,12 +4,15 @@
 }
 
 .chatbox {
-  text-align: center;
-  max-width: 800px;
-  margin: 10px auto;
-  background-color: $light-blue;
-  padding: 80px;
-  font-family: "Open Sans";
+      text-align: center;
+    max-width: 800px;
+    margin: 40px auto;
+    background-color: #00C7FD;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 20px;
+    padding-bottom: 80px;
+    font-family: "Open Sans";
 }
 
 
