--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,14 +14,14 @@
 .home-middle {
   margin-top: 120px;
   padding-top: 60px;
-  padding-bottom: 60px;
   text-align: center;
   min-height: 300px;
-  display: flex;
+  // display: flex;
   justify-content: center;
   flex-direction: column;
   height: 100vh;
 }
+
 
 .home-logo {
   padding-top: 100px;
@@ -100,10 +100,10 @@
   padding-top: 60px;
 }
 
-.no-border {
-  outline: none;
-  border: 0;
+.arrow {
+  padding-bottom: 60px;
 }
+
 
 @media screen and (max-width: 585px) {
   .home-about {
