--- a/app/views/shared_stories/new.html.erb
+++ b/app/views/shared_stories/new.html.erb
@@ -10,12 +10,12 @@
     <%= f.input :title, label: false, placeholder: "Title" %>
     <%= f.input :story, label: false, placeholder: "Write your story here..." %>
 
-    <% if !current_user.connections.nil? && current_user.connections.length > 0 %>
+    <% if current_user && current_user.connections.length > 0 %>
       <%= select_tag "shared_story[member_id]", options_for_select(current_user.connections.map { |connection| [connection.title, connection.id, { "data-img-src" => connection.full_picture }] }), class: "js-member-image-picker" %>
     <% else %>
     <br>
       Sorry, you don't have connections yet.
-      Go to the <%= link_to "posts", posts_path %>  to find someone to connect with!!
+      Go to the <%= link_to "posts", posts_path, class: "orange-link" %> to find someone to connect with!!
       <br>
     <% end %>
 
