--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,6 +14,7 @@
 .home-middle {
   margin-top: 120px;
   padding-top: 60px;
+  padding-bottom: 30px;
   text-align: center;
   min-height: 300px;
   // display: flex;
@@ -105,11 +106,17 @@
 }
 
 
+@media screen and (max-width: 1175px) {
+  .home-wrapper {
+    padding: 0 10px 40px;
+  }
+}
+
 @media screen and (max-width: 585px) {
   .home-about {
     font-size: 15px;
   }
   .home-wrapper {
-    padding: 0 20px 40px;
+    padding: 0 5px 20px;
   }
 }
