--- a/app/views/shared_stories/new.html.erb
+++ b/app/views/shared_stories/new.html.erb
@@ -14,8 +14,8 @@
       <%= select_tag "shared_story[member_id]", options_for_select(current_user.connections.map { |connection| [connection.title, connection.id, { "data-img-src" => connection.full_picture }] }), class: "js-member-image-picker" %>
     <% else %>
     <br>
-      Sorry, you don't have connections yet.
-      Go to the <%= link_to "posts", posts_path, class: "orange-link" %> to find someone to connect with!!
+      Sorry, you first need connections before you can write a shared story.
+      Go to the <%= link_to "posts", posts_path, class: "orange-link" %> to find someone to connect with!
       <br>
     <% end %>
 
