--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,7 +102,15 @@
 }
 
 .arrow {
-  padding-bottom: 60px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+
+  a {
+    color: rgba(0,0,0,0.1);
+    &:focus, &:active {
+    color: rgba(0,0,0,0.1);
+    }
+  }
 }
 
 
