--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,15 +12,15 @@
 }
 
 .home-middle {
+  position: relative;
   margin-top: 120px;
   padding-top: 60px;
   padding-bottom: 30px;
   text-align: center;
   min-height: 300px;
-  // display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 120vh;
+  height: 100vh;
 }
 
 
@@ -32,7 +32,7 @@
 }
 
 .home-button {
-  margin: 110px 0 150px 0;
+  margin-top: 110px;
   font-size: 30px;
 }
 
@@ -102,9 +102,9 @@
 }
 
 .arrow {
-  padding-bottom: 20px;
-  padding-top: 20px;
-
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
   a {
     color: rgba(0,0,0,0.1);
     &:focus, &:active {
